# obs-keystroke-history

./: .gitignore  ADVANCED_FEATURES.md  BUILD_GUIDE.md  CMakeLists.txt  CRASH_FIX_NOTES.md  DIAGNOSTIC_TEST.md  DISPLAY_IMPROVEMENTS.md  FEATURE_IMPLEMENTATION.md  FINALIZATION_DOCUMENTATION_SUMMARY.md  FINAL_POLISH.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_v1.2.0.md  LOG_CLEANUP.md  MILESTONE_RENDERING_WORKING.md  PACKAGING.md  PLAN_v1.2.0.md  QUICK_FINALIZATION_GUIDE.md  README.md  RELEASE_FINALIZATION_CHECKLIST.md  RELEASE_WORKFLOW_DIAGRAM.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  RELEASE_v1.2.1.md  TESTING_v1.1.0.md  TESTING_v1.2.0.md  TEST_INSTRUCTIONS.md  TEXT_READABILITY_FIX.md  TEXT_RENDERING_FIXES.md  WHATS_NEW_v1.1.0.md  WHATS_NEW_v1.2.0.md  WHATS_NEW_v1.2.1.md  WINDOW_FILTER_FIX.md  build-installer.ps1  build-obs.ps1  create-package.ps1  finalize-release.ps1  install-plugin.ps1  installer.iss  quick-build.ps1
data/locale/: en-US.ini
package/: INSTALL.txt
package/data/obs-plugins/keystroke-history/locale/: en-US.ini
src/: input-capture.cpp  input-capture.h  keystroke-source.cpp  keystroke-source.h  plugin-main.cpp  plugin-main.h  text-renderer.cpp  text-renderer.h
